Add embedded youtube video

--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -6,6 +6,8 @@ description: Install the Qiskit SDK and Qiskit Runtime on various operating syst
 <span id="qiskit-install"></span>
 # Install Qiskit
 
+<iframe width="560" height="315"  align="center" src="https://www.youtube.com/embed/dZWz4Gs_BuI?si=EbbKEtvPAk7G8DRZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real system, your next step is to choose one of two channels in order to access IBM Quantum&trade; systems: IBM Quantum Platform or IBM Cloud&reg;.
 
 <Admonition type="caution" title="Upgrade from Qiskit 0.x to Qiskit 1.0 and beyond">
@@ -123,8 +125,6 @@ Whether you will work locally or in a cloud environment, the first step for all 
       ```shell
       jupyter notebook path/to/notebook.ipynb
       ```
-
-
 
 If you are planning to work locally and use simulators built into Qiskit, then your installation is done. If you want to run jobs on IBM Quantum systems, next [select an access channel](setup-channel) and finish your setup.
 
