--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -31,7 +31,7 @@
    ],
    "source": [
     "%%html\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=93-zLTppFZw\" title=\"Hello World\" frameborder=\"0\" allow=\"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=crm4nHjwIHBoM2B0\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
   },
   {
