--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -50,13 +50,13 @@
     "\n",
     "The four steps to writing a quantum program using Qiskit Patterns are:\n",
     "\n",
-    "1.  Map the problem to a quantum-native format\n",
+    "1.  Map the problem to a quantum-native format.\n",
     "\n",
-    "2.  Optimize the circuits and operators\n",
+    "2.  Optimize the circuits and operators.\n",
     "\n",
-    "3.  Execute using a quantum primitive function\n",
+    "3.  Execute using a quantum primitive function.\n",
     "\n",
-    "4.  Analyze the results"
+    "4.  Analyze the results."
    ]
   },
   {
@@ -149,7 +149,7 @@
    "id": "f3ef4248-7938-44c1-85f1-edc997f0edcd",
    "metadata": {},
    "source": [
-    "While creating quantum circuits, you must also consider what type of data you want to get back after execution, and there are are two ways to do so within Qiskit. You can either obtain a probability distribution for a set of qubits you choose to measure, or obtain the expectation value of an observable. Preparing your workload to measure your circuit in one of these two ways is done through the [Qiskit primitives](../run/primitives-get-started) (explained in detail in [Step 3](#step-3-execute-using-the-quantum-primitives) of this page).\n",
+    "While creating quantum circuits, you must also consider what type of data you want returned after execution, and there are are two ways to do so within Qiskit. You can obtain a probability distribution for a set of qubits you choose to measure, or you can obtain the expectation value of an observable. Preparing your workload to measure your circuit in one of these two ways is done through the [Qiskit primitives](../run/primitives-get-started) (explained in detail in [Step 3](#step-3-execute-using-the-quantum-primitives)).\n",
     "\n",
     "This example measures expectation values by using the `qiskit.quantum_info` submodule, which is specified by using operators (mathematical objects used to represent an action or process that changes a quantum state). The following code cell creates six two-qubit Pauli operators: `IZ`, `IX`, `ZI`, `XI`, `ZZ`, and `XX`."
    ]
@@ -185,9 +185,9 @@
    "source": [
     "<Admonition type=\"note\" title=\"Operator Notation\">\n",
     "\n",
-    "Here, something like the `ZZ` operator is a shorthand for the tensor product $Z\\otimes Z$ which essentially means measuring Z on qubit 0 and Z on qubit 1 together and obtaining information about the correlation between qubit 0 and qubit 1. Expectation values like this are also typically written as $\\langle Z_0 Z_1 \\rangle$.\n",
+    "Here, something like the `ZZ` operator is a shorthand for the tensor product $Z\\otimes Z$, which essentially means measuring Z on qubit 0 and Z on qubit 1 together, and obtaining information about the correlation between qubit 0 and qubit 1. Expectation values like this are also typically written as $\\langle Z_0 Z_1 \\rangle$.\n",
     "\n",
-    "If the state is entangled, then the measurement of $\\langle Z_0 Z_1 \\rangle$ should be equal to 1.\n",
+    "If the state is entangled, then the measurement of $\\langle Z_0 Z_1 \\rangle$ should be 1.\n",
     "\n",
     "</Admonition>"
    ]
@@ -199,9 +199,9 @@
    "source": [
     "### Step 2. Optimize the circuits and operators\n",
     "\n",
-    "When executing circuits on a device, it is an important step to optimize the set of instructions which the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and takes both the device's basis gates as well as its qubit connectivity into account.\n",
+    "When executing circuits on a device, it is an important step to optimize the set of instructions that the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and must consider the device's basis gates and qubit connectivity.\n",
     "\n",
-    "The following code instantiates a real device to submit a job to and transform the circuit and observables to match that backend's ISA."
+    "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "### Step 3. Execute using the quantum primitives\n",
     "\n",
-    "Quantum computers can produce random results, so you'll often want to collect a sample of the outputs by running the circuit many times. You can estimate the value of the observable using the `Estimator` class. `Estimator` is one of two [primitives](../run/primitives-get-started); the other is `Sampler`, which can be used to get data from a quantum computer.  These objects possess a `run()` method that executes the selection of circuits, observables, and parameters (if applicable), using what's known as a [primitive unified bloc (PUB)](../run/primitives#sampler-v2)."
+    "Quantum computers can produce random results, so you usually collect a sample of the outputs by running the circuit many times. You can estimate the value of the observable by using the `Estimator` class. `Estimator` is one of two [primitives](../run/primitives-get-started); the other is `Sampler`, which can be used to get data from a quantum computer.  These objects possess a `run()` method that executes the selection of circuits, observables, and parameters (if applicable), using what's known as a [primitive unified bloc (PUB).](../run/primitives#sampler-v2)"
    ]
   },
   {
@@ -288,9 +288,9 @@
    "id": "47479e76",
    "metadata": {},
    "source": [
-    "Once a job is submitted, you can wait until either the job is completed within your current python instance, or use the `job_id` in order to retrieve the data at a later time.  (See the [section on retrieving jobs](../run/monitor-job#retrieve-job-results-at-a-later-time) for more info)\n",
+    "After a job is submitted, you can wait until either the job is completed within your current python instance, or use the `job_id` in order to retrieve the data at a later time.  (See the [section on retrieving jobs](../run/monitor-job#retrieve-job-results-at-a-later-time) for details.)\n",
     "\n",
-    "Once a job is completed, examine its output through the job's `result()` attribute shown below."
+    "After the job completes, examine its output through the job's `result()` attribute."
    ]
   },
   {
@@ -316,7 +316,7 @@
    "source": [
     "<Admonition type=\"note\" title=\"Alternative: run the example using a simulator\">\n",
     "\n",
-    "When running your quantum program on a real device your workload must wait in a queue before it is run. If you would like to save some time with this example, you can instead use the following code to run this small workload on a local simulator (using the [`fake_provider`](../api/qiskit-ibm-runtime/fake_provider)). Bear in mind this will only work for this small circuit, but when you scale up in the next section you will need to use a real device.\n",
+    "When running your quantum program on a real device, your workload must wait in a queue before it is run. To save some time, you can instead use the following code to run this small workload on in the Qiskit Runtime local testing mode to use the [`fake_provider`.](../api/qiskit-ibm-runtime/fake_provider) Note that this is only possible for a small circuit. When you scale up in the next section you will need to use a real device.\n",
     "\n",
     "```python\n",
     "# Use the following code instead if you want to run on a simulator:\n",
@@ -358,9 +358,9 @@
    "source": [
     "### Step 4. Analyze the results\n",
     "\n",
-    "The analyze step is typically where you might postprocess your results using something like measurement error mitigation or zero noise extrapolation. You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general this will be specific to your problem and so for this example,we'll simply plot each of the expectation values that were measured for our circuit.\n",
+    "The analyze step is typically where you might postprocess your results using something like measurement error mitigation or zero noise extrapolation (ZNE). You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general, this step is specific to your problem.  For this example, plot each of the expectation values that were measured for our circuit.\n",
     "\n",
-    "The expectation values and standard deviations for the observables you specified are accessed through the `PubResult.data.evs` and `PubResult.data.stds` attributes of the job results. To obtain the results from the sampler, use the `PubResult.data.meas.get_counts()` function which will return a `dict` of measurements in the form of bitstrings as keys and counts as their corresponding values."
+    "The expectation values and standard deviations for the observables you specified to Estimator are accessed through the job result's `PubResult.data.evs` and `PubResult.data.stds` attributes. To obtain the results from the Sampler, use the `PubResult.data.meas.get_counts()` function, which will return a `dict` of measurements in the form of bitstrings as keys and counts as their corresponding values. For more information, see [Get started with Sampler.](/run/primitives-get-started#get-started-with-sampler)"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "source": [
     "## Scale to large numbers of qubits\n",
     "\n",
-    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by working with a 100-qubit GHZ state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
+    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by creating and analyzing a 100-qubit GHZ state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
     "\n",
     "### Step 1. Map the problem\n",
     "\n",
@@ -461,7 +461,7 @@
    "id": "5b3d0d74",
    "metadata": {},
    "source": [
-    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the system. The `ZZ` operator between the 0th and 1st qubit should be the largest, and the `ZZ` operator between the 0th qubit and the 100th qubit should be the smallest."
+    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the system. "
    ]
   },
   {
@@ -631,12 +631,6 @@
     "  -   Try one of the [workflow example tutorials.](https://learning.quantum.ibm.com/catalog/tutorials?category=workflow-example)\n",
     "</Admonition>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24510d4b",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
