--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Hello world\n",
     "\n",
-    "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also watch this Hello World in practice in the Hello World episode of the Coding with Qiskit 1.0 video series. "
+    "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also follow along with the Hello World episode of the Coding with Qiskit 1.0 video series. "
    ]
   },
   {
@@ -30,8 +30,7 @@
     }
    ],
    "source": [
-    "%%html\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=crm4nHjwIHBoM2B0\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=crm4nHjwIHBoM2B0\" title=\"Hello World video\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
   },
   {
