--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -315,7 +315,7 @@
    "source": [
     "<Admonition type=\"note\" title=\"Alternative: run the example using a simulator\">\n",
     "\n",
-    "When running your quantum program on a real device, your workload must wait in a queue before it is run. To save some time, you can instead use the following code to run this small workload on in the Qiskit Runtime local testing mode to use the [`fake_provider`.](../api/qiskit-ibm-runtime/fake_provider) Note that this is only possible for a small circuit. When you scale up in the next section you will need to use a real device.\n",
+    "When running your quantum program on a real device, your workload must wait in a queue before it is run. To save some time, you can instead use the following code to run this small workload in the Qiskit Runtime local testing mode to use the [`fake_provider`.](../api/qiskit-ibm-runtime/fake_provider) Note that this is only possible for a small circuit. When you scale up in the next section you will need to use a real device.\n",
     "\n",
     "```python\n",
     "# Use the following code instead if you want to run on a simulator:\n",
