Fix video + run squeaky

--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -7,31 +7,9 @@
    "source": [
     "# Hello world\n",
     "\n",
-    "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also watch this Hello World in practice in the Hello World episode of the Coding with Qiskit 1.0 video series. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7973a948",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=93-zLTppFZw\" title=\"Hello World\" frameborder=\"0\" allow=\"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=crm4nHjwIHBoM2B0\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
+    "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also watch this Hello World in practice in the Hello World episode of the Coding with Qiskit 1.0 video series.\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=whJzB_FrpuorerTv\" title=\"Hello World\" frameborder=\"0\" allow=\"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
    ]
   },
   {
@@ -461,7 +439,7 @@
    "id": "5b3d0d74",
    "metadata": {},
    "source": [
-    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the system. "
+    "Next, map to the operators of interest. This example uses the `ZZ` operators between qubits to examine the behavior as they get farther apart.  Increasingly inaccurate (corrupted) expectation values between distant qubits would reveal the level of noise on the system."
    ]
   },
   {
@@ -497,7 +475,7 @@
    "source": [
     "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
-    "Transform the circuit and observables to match the backend's ISA. "
+    "Transform the circuit and observables to match the backend's ISA."
    ]
   },
   {
@@ -616,7 +594,7 @@
    "id": "0afc307c",
    "metadata": {},
    "source": [
-    "The previous plot shows that as the distance between qubits increases, the signal decays because there is noise on the system. "
+    "The previous plot shows that as the distance between qubits increases, the signal decays because there is noise on the system."
    ]
   },
   {
@@ -637,7 +615,7 @@
   "celltoolbar": "Raw Cell Format",
   "description": "Get started using Qiskit with IBM Quantum hardware in this Hello World example",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -651,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Hello world",
   "widgets": {
