--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -177,7 +177,7 @@
    "source": [
     "### Step 2. Optimize the circuits and operators\n",
     "\n",
-    "When executing circuits on a device, it is an important step to optimize the set of instructions that the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and must consider the device's basis gates and qubit connectivity.\n",
+    "When executing circuits on a device, it is important to optimize the set of instructions that the circuit contains and minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and must consider the device's basis gates and qubit connectivity.\n",
     "\n",
     "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA."
    ]
