Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This example contains two parts: you will first create a simple quantum program and run it on a quantum system.  Because actual quantum research requires much more robust programs, in the [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits) section, you will scale the simple program up to utility level.  You can also follow along with the Hello World episode of the Coding with Qiskit 1.0 video series. \n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=whJzB_FrpuorerTv\" title=\"Hello World\" frameborder=\"0\" allow=\"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+    "<iframe width=\"100%\" height=\"450\" src=\"https://www.youtube.com/embed/93-zLTppFZw?si=whJzB_FrpuorerTv\" title=\"Hello World\" frameborder=\"0\" allow=\"accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "id": "47479e76",
    "metadata": {},
    "source": [
-    "After a job is submitted, you can wait until either the job is completed within your current python instance, or use the `job_id` in order to retrieve the data at a later time.  (See the [section on retrieving jobs](../run/monitor-job#retrieve-job-results-at-a-later-time) for details.)\n",
+    "After a job is submitted, you can wait until either the job is completed within your current python instance, or use the `job_id` to retrieve the data at a later time.  (See the [section on retrieving jobs](../run/monitor-job#retrieve-job-results-at-a-later-time) for details.)\n",
     "\n",
     "After the job completes, examine its output through the job's `result()` attribute."
    ]
@@ -294,7 +294,7 @@
    "source": [
     "<Admonition type=\"note\" title=\"Alternative: run the example using a simulator\">\n",
     "\n",
-    "When running your quantum program on a real device, your workload must wait in a queue before it is run. To save some time, you can instead use the following code to run this small workload in the Qiskit Runtime local testing mode to use the [`fake_provider`.](../api/qiskit-ibm-runtime/fake_provider) Note that this is only possible for a small circuit. When you scale up in the next section you will need to use a real device.\n",
+    "When you run your quantum program on a real device, your workload must wait in a queue before it runs. To save time, you can instead use the following code to run this small workload on the [`fake_provider`](../api/qiskit-ibm-runtime/fake_provider) with the Qiskit Runtime local testing mode. Note that this is only possible for a small circuit. When you scale up in the next section, you will need to use a real device.\n",
     "\n",
     "```python\n",
     "# Use the following code instead if you want to run on a simulator:\n",
@@ -336,9 +336,9 @@
    "source": [
     "### Step 4. Analyze the results\n",
     "\n",
-    "The analyze step is typically where you might postprocess your results using something like measurement error mitigation or zero noise extrapolation (ZNE). You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general, this step is specific to your problem.  For this example, plot each of the expectation values that were measured for our circuit.\n",
+    "The analyze step is typically where you might postprocess your results using, for example, measurement error mitigation or zero noise extrapolation (ZNE). You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general, this step is specific to your problem.  For this example, plot each of the expectation values that were measured for our circuit.\n",
     "\n",
-    "The expectation values and standard deviations for the observables you specified to Estimator are accessed through the job result's `PubResult.data.evs` and `PubResult.data.stds` attributes. To obtain the results from the Sampler, use the `PubResult.data.meas.get_counts()` function, which will return a `dict` of measurements in the form of bitstrings as keys and counts as their corresponding values. For more information, see [Get started with Sampler.](/run/primitives-get-started#get-started-with-sampler)"
+    "The expectation values and standard deviations for the observables you specified to Estimator are accessed through the job result's `PubResult.data.evs` and `PubResult.data.stds` attributes. To obtain the results from Sampler, use the `PubResult.data.meas.get_counts()` function, which will return a `dict` of measurements in the form of bitstrings as keys and counts as their corresponding values. For more information, see [Get started with Sampler.](/run/primitives-get-started#get-started-with-sampler)"
    ]
   },
   {
