--- a/docs/verify/local-testing-mode.ipynb
+++ b/docs/verify/local-testing-mode.ipynb
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/qiskit/.venv/site-packages/qiskit_ibm_runtime/session.py:156: UserWarning: Session is not supported in local testing mode or when using a simulator.\n",
+      "/Users/frankharkins/Documents/documentation/.tox/py3/lib/python3.11/site-packages/qiskit_ibm_runtime/session.py:157: UserWarning: Session is not supported in local testing mode or when using a simulator.\n",
       "  warnings.warn(\n"
      ]
     }
