Make code examples less brittle

--- a/docs/run/save-jobs.ipynb
+++ b/docs/run/save-jobs.ipynb
@@ -77,9 +77,9 @@
     }
    ],
    "source": [
-    "# Get ID of most recent job for demonstration.\n",
-    "# This will not work if you've never submitted a job.\n",
-    "job_id = service.jobs()[0].job_id()\n",
+    "# Get ID of most recent successful job for demonstration.\n",
+    "# This will not work if you've never successfully run a job.\n",
+    "job_id = service.jobs(pending=False)[0].job_id()\n",
     "print(job_id)"
    ]
   },
@@ -167,7 +167,7 @@
     "with open(\"result.json\", \"r\") as file:\n",
     "    result = json.load(file, cls=RuntimeDecoder)\n",
     "\n",
-    "result[0].data.meas.array  # access measurement data"
+    "result"
    ]
   },
   {
