--- a/docs/run/get-backend-information.ipynb
+++ b/docs/run/get-backend-information.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "service = QiskitRuntimeService()\n",
+    "service = QiskitRuntimeService(instance=\"ibm-q/open/main\")\n",
     "\n",
     "service.backends()"
    ]
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "service.backend(\"ibmq_qasm_simulator\")"
+    "service.backend(\"ibm_kyoto\")"
    ]
   },
   {
