--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -62,7 +62,7 @@
    "id": "21f7a26c",
    "metadata": {},
    "source": [
-    "The following code cell creates a circuit that produces a *Bell state,* which is a state wherein two (or more) qubits are fully entangled with each other.\n",
+    "The following code cell creates a circuit that produces a *Bell state,* which is a state wherein two qubits are fully entangled with each other.\n",
     "\n",
     "<Admonition type=\"note\" title=\"Note: bit ordering\">\n",
     "  The Qiskit SDK uses the LSb 0 bit numbering where the $n^{th}$ digit has value $1 \\ll n$ or $2^n$. For more details, see the [Bit-ordering in the Qiskit SDK](../build/bit-ordering) topic.\n",
@@ -117,9 +117,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) in the documentation for all available operations.\n",
-    "\n",
-    "---"
+    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) in the documentation for all available operations."
    ]
   },
   {
@@ -152,8 +150,7 @@
     "IX = Pauli('IX')\n",
     "\n",
     "observables = [IZ, IX, ZI, XI, ZZ, XX]\n",
-    "observables_labels = [\"IZ\", \"IX\", \"ZI\", \"XI\", \"ZZ\", \"XX\"]\n",
-    "observables = [SparsePauliOp(label) for label in observables_labels]"
+    "observables_labels = [obs.to_label() for obs in observables]"
    ]
   },
   {
@@ -463,9 +460,6 @@
     "        raise Exception(\"n is not a valid input\")\n",
     "    return qc\n",
     "\n",
-    "\n",
-    "from qiskit import QuantumCircuit\n",
-    "\n",
     "# Create a new circuit with two qubits (first argument) and two classical\n",
     "# bits (second argument)\n",
     "n = 100\n",
@@ -498,7 +492,7 @@
    "source": [
     "from qiskit.quantum_info import SparsePauliOp\n",
     "\n",
-    "# ZZII...II, ZIZI...II, ... , ZIII...ZZ\n",
+    "# ZZII...II, ZIZI...II, ... , ZIII...IZ\n",
     "operator_strings = ['Z' + 'I'*i + 'Z' + 'I'*(n-2-i) for i in range(n-1)]\n",
     "print(operator_strings)\n",
     "print(len(operator_strings))\n",
