--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -6,6 +6,8 @@ description: Install the Qiskit SDK and Qiskit Runtime on various operating syst
 <span id="qiskit-install"></span>
 # Install Qiskit
 
+<iframe width="100%" height="450" src="https://www.youtube.com/embed/dZWz4Gs_BuI?si=EbbKEtvPAk7G8DRZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 Whether you will work locally or in a cloud environment, the first step for all users is to install Qiskit. For those wanting to run on a real system, your next step is to choose one of two channels in order to access IBM Quantum&trade; systems: IBM Quantum Platform or IBM Cloud&reg;.
 
 <Admonition type="caution" title="Upgrade from Qiskit 0.x to Qiskit 1.0 and beyond">
@@ -92,9 +94,6 @@ Whether you will work locally or in a cloud environment, the first step for all 
       ```shell
       pip install qiskit-ibm-runtime
       ```
-      <Admonition type="note">
-          Periodically rerun these commands or check the [Qiskit release notes](../api/qiskit/release-notes) and the [Qiskit Runtime release notes](../api/qiskit-ibm-runtime/release-notes) so that you always have the latest versions.
-      </Admonition>
 
       If you intend to use visualization functionality or Jupyter notebooks, it is recommended to install Qiskit with the extra visualization support. Note that **zsh users** need to put `'qiskit[visualization]'` in single quotes.
 
@@ -124,9 +123,11 @@ Whether you will work locally or in a cloud environment, the first step for all 
       jupyter notebook path/to/notebook.ipynb
       ```
 
-
-
 If you are planning to work locally and use simulators built into Qiskit, then your installation is done. If you want to run jobs on IBM Quantum systems, next [select an access channel](setup-channel) and finish your setup.
+
+<Admonition type="note" title="Stay current with the latest versions">
+    Periodically check the [Qiskit release notes](../api/qiskit/release-notes) and the [Qiskit Runtime release notes](../api/qiskit-ibm-runtime/release-notes) to see new releases. We recommend frequently updating your requirements for `qiskit` and `qiskit-ibm-runtime` by, for example, changing the versions in `requirements.txt` to the latest versions.
+</Admonition>
 
 ## Troubleshooting
 
