--- a/docs/verify/index.mdx
+++ b/docs/verify/index.mdx
@@ -28,6 +28,6 @@ Several factors impact how much memory quantum simulation requires, so there are
 
 - The only requirement to run Qiskit is a functioning Python environment.  For details, see the [Operating system support](../start/install#operating-system-support) section.
 - Because the requirements for simulating quantum circuits scale exponentially with the number of qubits, the available hardware limits the number of qubits that can be simulated. For example, a system with 4GB RAM can simulate approximately 27 qubits.
-- More or less available memory will not result in better or worse results (assuming results are returned).
+- More or less available memory will not result in more or less accurate results (assuming results are returned), although more memory might return results faster or let you simulate more qubits.
 - To get the most benefit out of your hardware, use local stabilizer (Clifford) circuit simulation when possible.  See [Clifford simulation with Qiskit Runtime local testing mode](local-testing-mode#clifford-simulation) or [Efficient simulation of stabilizer circuits with Qiskit Aer primitives](stabilizer-circuit-simulation) for examples.
 - You can increase your computing power by following these instructions to [run with multiple GPUs, nodes, or both.](https://qiskit.github.io/qiskit-aer/howtos/running_gpu.html)
