--- a/docs/run/execution-modes-faq.mdx
+++ b/docs/run/execution-modes-faq.mdx
@@ -156,7 +156,7 @@ Because there are three available lanes, the scheduler starts three of your six 
 
 <details>
   <summary>
-    Do all of mybBatch jobs need to wait in the queue?
+    Do all of my batch jobs need to wait in the queue?
   </summary>
 
 Because QPUs are limited and shared resources, all jobs need to wait in the queue. However, when the first job in your batch starts running, all the other jobs in that batch essentially jump to the front of the queue and are prioritized by the scheduler.
