--- a/docs/run/primitives-get-started.mdx
+++ b/docs/run/primitives-get-started.mdx
@@ -20,7 +20,7 @@ service = QiskitRuntimeService(channel="ibm_cloud", channel_strategy="q-ctrl")
 </Admonition>
 
 <Admonition type="note">
-    These examples all use the primitives from Qiskit Runtime, but you could use the base primitives instead. 
+    These examples all use the primitives from Qiskit Runtime, but you could use the base primitives instead.
 </Admonition>
 
 <span id="start-estimator"></span>
@@ -57,6 +57,10 @@ mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
 observable = SparsePauliOp("Z" * n_qubits)
 print(f">>> Observable: {observable.paulis}")
+```
+Output
+```text
+>>> Observable: ['ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ...']
 ```
     The circuit and observable need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits). We'll use the transpiler to do this.
 
@@ -96,7 +100,7 @@ estimator = Estimator(backend=backend)
 
 Next, invoke the `run()` method to calculate expectation values for the input circuits and observables.
 
-For Estimator V2, the circuit, observable, and optional parameter value sets are input as *primitive unified bloc* (PUB) tuples. 
+For Estimator V2, the circuit, observable, and optional parameter value sets are input as *primitive unified bloc* (PUB) tuples.
 
 <Tabs>
   <TabItem value="EstimatorV2" label="Estimator V2">
@@ -105,12 +109,23 @@ job = estimator.run([(isa_circuit, isa_observable)])
 print(f">>> Job ID: {job.job_id()}")
 print(f">>> Job Status: {job.status()}")
 ```
+Output
+```text
+>>> Job ID: 8874203f-f5a0-4491-b093-3f29a1adcae4
+>>> Job Status: JobStatus.RUNNING
+```
 
 ```python
 result = job.result()
 print(f">>> {result}")
 print(f"  > Expectation value: {result[0].data.evs}")
 print(f"  > Metadata: {result[0].metadata}")
+```
+Output
+```text
+>>> PrimitiveResult([PubResult(data=DataBin<>(evs=0.013671875, stds=0.0156235396179561), metadata={'target_precision': 0.015625})], metadata={})
+  > Expectation value: 0.013671875
+  > Metadata: {'target_precision': 0.015625}
 ```
   </TabItem>
 
@@ -148,7 +163,7 @@ backend = service.least_busy(operational=True, simulator=False, min_num_qubits=1
 
 ### 2. Create a circuit
 
-You need at least one circuit as the input to the `Sampler` primitive. 
+You need at least one circuit as the input to the `Sampler` primitive.
 
 ```python
 import numpy as np
@@ -174,7 +189,7 @@ isa_circuit = pm.run(circuit)
 
 When you initialize the `Sampler`, pass in the simulator or system you previously selected as the target.
 
-To use the Sampler V2, import the **SamplerV2** class. The **Sampler** class still refers to the version 1 Sampler, for backwards compatibility.
+To use the Sampler V2, import the **SamplerV2** class. The **Sampler** class still refers to the version 1 Sampler, for backward compatibility.
 
 <Tabs>
   <TabItem value="SamplerV2" label="Sampler V2">
@@ -209,13 +224,22 @@ job = sampler.run([isa_circuit])
 print(f">>> Job ID: {job.job_id()}")
 print(f">>> Job Status: {job.status()}")
 ```
+Output
 
+```text
+>>> Job ID: 58223448-5100-4dec-a47a-942fb30edced
+>>> Job Status: JobStatus.RUNNING
+```
 ```python
 result = job.result()
 
 # Get results for the first (and only) PUB
 pub_result = result[0]
 print(f"Counts for the meas output register: {pub_result.data.meas.get_counts()}")
+```
+Output
+```text
+Counts for the meas output register: {'0111': 50, '0000': 243, '0001': 101, '0101': 93, '0100': 188, '0011': 128, '1011': 22, '0110': 13, '1100': 10, '1000': 24, '0010': 29, '1010': 26, '1101': 20, '1110': 45, '1001': 16, '1111': 16}
 ```
   </TabItem>
 
