--- a/docs/run/run-jobs-in-session.mdx
+++ b/docs/run/run-jobs-in-session.mdx
@@ -119,7 +119,7 @@ There is also an interactive timeout value (ITTL, or interactive time to live) t
 <span id="close"></span>
 ## Close a session
 
-A session automatically closes when it exits the context manager. WWhen the session context manager is exited, the session is put into "In progress, not accepting new jobs" status. This means that the session finishes processing all running or queued jobs until the maximum timeout value is reached. After all jobs are completed, the session is immediately closed. This allows the scheduler to run the next job without waiting for the session interactive timeout, thereby reducing the average job queuing time. You cannot submit jobs to a closed session.
+A session automatically closes when it exits the context manager. When the session context manager is exited, the session is put into "In progress, not accepting new jobs" status. This means that the session finishes processing all running or queued jobs until the maximum timeout value is reached. After all jobs are completed, the session is immediately closed. This allows the scheduler to run the next job without waiting for the session interactive timeout, thereby reducing the average job queuing time. You cannot submit jobs to a closed session.
 
 ``` python
 with Session(service=service, backend=backend) as session:
@@ -206,7 +206,7 @@ with Session(backend=backend):
 <span id="two-vqe"></span>
 ## Run two VQE algorithms in a session by using threading
 
-You can get more out of a session by running multiple workloads at once. The following example shows how you can run two VQE algorithms, each uses a different classical optimizer, simultaneously inside a single session. Job tags are also used to differentiate jobs from each workload.
+You can get more out of a session by running multiple workloads simultaneously. The following example shows how you can run two VQE algorithms, each using a different classical optimizer, simultaneously inside a single session. Job tags are also used to differentiate jobs from each workload.
 ```python
 from concurrent.futures import ThreadPoolExecutor
 from qiskit_ibm_runtime import  Session, EstimatorV2 as Estimator
