--- a/docs/run/run-jobs-in-session.mdx
+++ b/docs/run/run-jobs-in-session.mdx
@@ -9,7 +9,7 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 There are several ways to set up and use [sessions](sessions).  It is recommended that you do not run a session with a single job in it.
 
 <Admonition type="note">
-Session execution mode is not supported in the Open plan. Jobs will run in job mode instead.
+Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
 </Admonition>
 
 <Admonition type="caution" title="Important">
