--- a/docs/run/execution-modes.mdx
+++ b/docs/run/execution-modes.mdx
@@ -15,11 +15,11 @@ There are several ways to run workloads, depending on your needs.
 
 The differences are summarized in the following table:
 
-|     Mode     |         Example        |                  Usage                  |                                                                                                        Benefit                                                                                                        |
-|:------------:|:----------------------:|:---------------------------------------:|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
-| Job mode     |                        | Quantum computation only.               | Easiest to use when running a small experiment. Might run sooner than batch mode.                                                                                                                                     |
-| Batch mode   |                        | Quantum computation only.               | The entire batch of jobs is scheduled together and there is no additional queuing time for each. Jobs in a batch are run close together.                                                                             |
-| Session mode | Hamiltonian simulation | Both classical and quantum computation. | Dedicated and exclusive access to the system during the session active window, and no other users’ or system jobs can run. This is particularly useful for workloads that don’t have all inputs ready at the outset.  |
+|     Mode     |                  Usage                  |                                                                                                        Benefit                                                                                                        |
+|:------------:|:---------------------------------------:|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------:|
+| Job mode     | Quantum computation only.               | Easiest to use when running a small experiment. Might run sooner than batch mode.                                                                                                                                     |
+| Batch mode   | Quantum computation only.               | The entire batch of jobs is scheduled together and there is no additional queuing time for each. Jobs in a batch are usually run close together.                                                                     |
+| Session mode | Both classical and quantum computation. | Dedicated and exclusive access to the system during the session active window, and no other users’ or system jobs can run. This is particularly useful for workloads that don’t have all inputs ready at the outset.  |
 
 <span id="best-practices"></span>
 ## Best practices
