--- a/docs/api/migration-guides/index.mdx
+++ b/docs/api/migration-guides/index.mdx
@@ -12,6 +12,7 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
    * [Qiskit 1.0 packaging changes](/api/migration-guides/qiskit-1.0-installation)
    * [Qiskit 1.0 feature changes](/api/migration-guides/qiskit-1.0-features)
 * [Migrate to the Qiskit Runtime V2 primitives](/api/migration-guides/v2-primitives)
+* [Qiskit Runtime execution mode changes](/api/migration-guides/sessions)
 * Migrate to Qiskit Runtime
    * [Overview](./qiskit-runtime)
    * [Migrate from `qiskit-ibmq-provider`](./qiskit-runtime-from-ibmq-provider)
