--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -1,9 +1,9 @@
 ---
-title: Select and set up an IBM Quantum channel
+title: Set up an IBM Quantum channel
 description: Installation and setup instructions for IBM Quantum Platform or IBM Quantum on IBM Cloud to submit Qiskit SDK and Qiskit Runtime jobs
-
 ---
-# Select and set up an IBM Quantum channel
+
+# Set up an IBM Quantum channel
 
 You can access IBM Quantum&trade; systems by using the IBM Quantum Platform or IBM Cloud&reg; _channel_.  _Channel_ is the term used to describe the method you use to access IBM Quantum services. 
 
