--- a/docs/verify/plot-quantum-states.ipynb
+++ b/docs/verify/plot-quantum-states.ipynb
@@ -179,7 +179,7 @@
     "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_state_qsphere) for more information.\n",
     "\n",
     "</TabItem>\n",
-    "<TabItem value=\"Bloch\" label=\"Bloch\"> \n",
+    "<TabItem value=\"Bloch\" label=\"Bloch\">\n",
     "\n",
     "  The Bloch vector of a qubit state is its expectation value in the X, Y, and Z Pauli observables mapped to the X, Y, and Z axes in three-dimensional space. This plot projects multi-qubit quantum states onto the single-qubit space and plots each qubit on a Bloch sphere. This visualization only shows the expectation values of individual qubits. It can't show correlations between qubits and so can't fully describe entangled quantum states.\n",
     "\n",
@@ -188,7 +188,7 @@
     "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_bloch_multivector) for more information.\n",
     "\n",
     "</TabItem>\n",
-    "</Tabs>\n"
+    "</Tabs>"
    ]
   },
   {
